# pwn

./: .hgignore  pwn.nimble  readme.org
diz/: Cargo.toml  readme.org
diz/src/: main.rs
lab/: readme.org
lab/scratch/asd/: notes.org  sin_c3.wav.asd  sin_c4.wav.asd
lab/scratch/nim/: Makefile
lab/scratch/spider/: Cargo.toml
lab/scratch/wasp/: Cargo.toml
lab/scratch/wasp/mod/: Cargo.toml  hello.wasm
lab/scratch/wasp/src/: main.rs
lab/scripts/: add-demon.sh  arch-chroot.sh  hackrf.py  install.sh  nbd-firewall-rule.ps1  podman-bootstrap.sh  port-scan.sh  qemu-init-uefi.sh  qemu-init-win10.sh  tmux-base.sh  wg-gen-keys.sh  win-dlbin64-certutil.ps1  win-dlx-bitsadmin.ps1
lab/scripts/archiso/: first-run.sh  mkinit-linux.sh  mkinit.sh  test.sh
lab/scripts/qemu/: qemu-img-create.sh  qemu-init-uefi.sh  qemu-init-win10.sh  qemu-init-win11.sh
pr2/: .env  Cargo.toml  readme.org
pr2/agent/: Cargo.toml
pr2/agent/src/: cfg.rs  config.rs  error.rs  exe.rs  init.rs  install.rs  lib.rs  main.rs
pr2/agent/src/install/: linux.rs  macos.rs  windows.rs
pr2/client/: Cargo.toml  pr2.el
pr2/client/src/: app.rs  cfg.rs  err.rs  error.rs  lib.rs  main.rs  parser.rs  udp.rs  ui.rs
pr2/proto/: Cargo.toml
pr2/proto/src/: api.rs  codec.rs  crypto.rs  error.rs  lib.rs  packet.rs
pr2/proto/src/api/: c2.rs  op.rs
pr2/proto/src/codec/: c2.rs  op.rs
pr2/server/: .env  Cargo.toml  sqlx-data.json
pr2/server/src/: cfg.rs  db.rs  error.rs  http.rs  lib.rs  main.rs  udp.rs
pr2/server/src/db/: types.rs
src/: crypto_bin.nim  pwndb_bin.nim
