[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
uuid = { version = "1", features = ["serde", "v4"] }
dirs = "4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.7"
ed25519-dalek = "1"
x25519-dalek = "1"
single-instance = "0.3"
zip = "0.6"
base64 = "0.13"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach = "0.3"
security-framework = "2.7.0"