[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pr2-client"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
thiserror = "1.0.31"
proto = { path = "../proto" }
tokio-util = { version = "0.7.3", features = ["codec", "net"] }
bytes = "1.2.1"
futures = "0.3.21"
log = "0.4.17"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
