[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version  = "0.4", features = ["serde"] }
rand = "0.7"
x25519-dalek = "1"
chacha20poly1305 = "0.10"
base64 = "0.13"
bincode = "1.3.3"
tokio-util = { version = "0.7.3", features = [ "codec" ] }
tokio = { version = "1.20.0", features = ["full"] }
bytes = "1.2.1"
blake3 = "1.3.1"
base58 = "0.2.0"
base32 = "0.4.0"
thiserror = "1.0.32"
