[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
default = ["all"]
all = ["udp", "dns", "http"]
udp = []
dns = ["trust-dns-client", "trust-dns-server", "trust-dns-resolver"]
http = ["warp"]
#smtp,imap,pop3

[dependencies]
clap = { version = "3.2.14", features = ["derive", "env"] }
proto = { path = "../proto" }
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "postgres", "offline", "uuid", "chrono" ] }
tokio = { version = "1.20.0", features = ["full"] }
async-trait = "0.1.50"
trust-dns-client = { version = "0.20.3", default-features = false, optional = true }
trust-dns-server = { version = "0.20.3", optional = true }
trust-dns-resolver = { version = "0.20.3", optional = true }
tokio-util = { version = "0.7.3", features = [ "codec", "net" ] }
log = "0.4"
tracing = "0.1.35"
serde = { version = "1.0.143", features = ["derive"] }
bincode = "1.3.3"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
chrono = "0.4.21"
ed25519-dalek = "1.0.1"
warp = { version = "0.3.2", features = ["tokio-rustls"], optional = true }
thiserror = "1.0.32"
bytes = "1.2.1"
futures = "0.3.21"
url = "2.2.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }